# glazed

./: Cargo.toml  Dockerfile  apps.yaml  config.toml
.github/workflows/: _container.yml  _helm.yml  _rust.yml  ci.yml
Charts/glazed/: Chart.yaml  values.yaml
Charts/glazed/files/: config.toml
Charts/glazed/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
Charts/glazed/templates/tests/: test-connection.yaml
helm/: values.yaml
helm/templates/: deployment.yaml
resources/: container_event_stream.json  container_run.json  container_snippet.json  metadata_array.json  metadata_event_stream.json  metadata_run.json  metadata_table.json  search_root.json  search_root_errors.json  search_run_container.json  table_full.json  tiled_metadata.json
src/: cli.rs  clients.rs  config.rs  download.rs  handlers.rs  main.rs  metadata.rs  model.rs  schemas.rs  test_utils.rs  tiled.rs  tiled_client.rs
src/clients/: client.rs  mock_tiled_client.rs  tiled_client.rs
src/handlers/: graphql.rs
src/model/: app.rs  app_metadata.rs  array.rs  common.rs  container.rs  event_stream.rs  event_stream_metadata.rs  filter.rs  metadata.rs  node.rs  run.rs  run_metadata.rs  search.rs  session.rs  table.rs  tiled.rs
src/schemas/: metadata.rs  tiled.rs  tiled_metadata.rs
static/: 404.html  get_graphql_warning.html
