[package]
name = "glazed"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0.17"
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
axum = { version = "0.8.4", features = ["__private"] }
async-graphql-axum = "7.0.17"
url = "2.5.7"